--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/global-styles.css">
     <link rel="stylesheet" href="css/login.css">
-    <script type="text/javascript" src="js/auth.js"></script>    
+    <script type="module" src="js/auth.js"></script>    
 </head>
 <body id="main" class="main fade-in" tabindex=0 >
 
