login state via custom event + cosmetic changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body id="main" class="main fade-in" tabindex=0 >
 
-    <header class="main base-margin">
+    <header class="main base-margin fade-in-out">
         <h2 class="hello-message" id="hello-message">
             You are not logged in.
         </h2>
