css / more cosmetic changes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                     <div class="submit-container container">
                         <button type="button" id="signup-button" class="signup-button">Sign up</button>
-                        <button type="button" id="guest-button" class="login-button">Guest</button>
+                        <button type="button" id="guest-button" class="guest-button">Guest</button>
                         <button type="submit" name="login-submit" id="login-submit" class="submit-button">Login</button>
                     </div>
                     
