--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     </div>
 
                     <div class="submit-container container">
-                        <button type="button" id="signup-button" class="signup-button">Sign up</button>
-                        <button type="button" id="guest-button" class="guest-button">Guest</button>
+                        <button type="button" id="signup-button" class="non-submit-button">Sign up</button>
+                        <button type="button" id="guest-button" class="non-submit-button">Guest</button>
                         <button type="submit" name="login-submit" id="login-submit" class="submit-button">Login</button>
                     </div>
                     
@@ -183,7 +183,7 @@
                     </div>
 
                     <div class="submit-container container">
-                        <button type="button" id="login-button" class="login-button">Login</button>
+                        <button type="button" id="login-button" class="non-submit-button">Login</button>
                         <button type="submit" name="signup-submit" id="signup-submit" class="submit-button signup-button">Sign up</button>
                     </div>
                     
