css - UI/UX changes

--- a/index.html
+++ b/index.html
@@ -74,12 +74,17 @@
                     </div>
 
                     <div class="submit-container container">
-                        <button type="button" id="signup-button" class="non-submit-button">Sign up</button>
-                        <button type="button" id="guest-button" class="non-submit-button">Guest</button>
+                        <button type="button" id="guest-button" class="non-submit-button guest-button">Guest</button>
                         <button type="submit" name="login-submit" id="login-submit" class="submit-button">Login</button>
                     </div>
                     
                 </form>
+                <div class="form-link-container">
+                    <span>Need an account?</span>
+                    <button type="button" id="signup-button" class="link-style-button">
+                        Sign up with your email
+                    </button>
+                </div>
             </div>
 
 
@@ -183,11 +188,16 @@
                     </div>
 
                     <div class="submit-container container">
-                        <button type="button" id="login-button" class="non-submit-button">Login</button>
                         <button type="submit" name="signup-submit" id="signup-submit" class="submit-button signup-button">Sign up</button>
                     </div>
                     
                 </form>
+                <div class="form-link-container">
+                    <span>Have an account?</span>
+                    <button type="button" id="login-button" class="link-style-button">
+                        Login
+                    </button>
+                </div>
             </div>    
 
 
