update login state from database

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
             <div tabindex="0" id="form-data-sent" class="form-data-sent">
                 <div class="form-data-sent-message">
                     <h2>Your have signed up successfully.</h2>
-                    <p><br>Please follow the link that has been sent to your email address to complete the registration process.</p> 
+                    <p><br>Please follow the link that has been sent to your email address to complete the registration process.</p>
+                    <p>Be sure to also check your spam folder.</p> 
                     <p style="font-weight: bold;"><br>Hit any key or click anywhere to continue.</p>
                 </div>
             </div>
